YAML/getvirus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getvirus-service
spec:
  selector:
    app: getvirus
  ports:
    - protocol: TCP
      port: 3000
