YAML/getvirus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getvirus-ingress
spec:
  rules:
  - host: getvirus.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: getvirus-service
            port:
              number: 3000
  ingressClassName: nginx
